2000-06-28  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* lib/hostname.cc (getnames): Changed the logic here to append the
	domain name to the node name to produce the fully qualified host
	name if the node name does not already contain the domain name.

	* protocols/smtp.cc: Changed all the calls to smtp::docmd to use
	the start of the range instead of the expected response.  This may
	have been causing some SMTP sessions to fail.

2000-06-19  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* lib/tcpconnect.cc (tcpconnect): Removed an extraneous const from
	the call to connect.

2000-06-15  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* Released version 1.00RC1

	* Fixed up copyright notices in all the sources.

	* lib/makefield.cc (make_date): Totally reworked the logic here if
	tm_gmtoff is detected to fix timezone and DST detection bugs.

2000-01-11  Bruce Guenter  <bguenter@bguenter.pointsnorth.com>

	* Released version 0.40

	* lib/makefield.cc: Fixed up to autodetect (with the help of
	configure) the tm_isdst and tm_gmtoff flags in struct tm.

2000-01-11  Bruce Guenter  <bruceg@daedalus.bfsmedia.com>

	* lib/tcpconnect.cc: Reordered the include files here to avoid
	problems with FreeBSD headers.

2000-01-10  Bruce Guenter  <bruceg@daedalus.bfsmedia.com>

	* lib/address.cc: Renamed isspecial to issymbol to avoid problems
	on FreeBSD caused by an existing "isspecial" macro.

	* src/sendmail.cc (cli_main): Fixed typo that caused parseargs to
	not be called.

1999-10-22  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* protocols/protocol.cc (cli_main): Use the already opened FD to
	load the message from instead of opening it.

	* src/send.cc (send_one): Open the named file for writing before
	attempting to send message, and pass it to exec_protocol.
	(exec_protocol): Dup the open message to FD 0 before executing
	program.

1999-10-21  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* Released version 0.39
